<resources>
    <string name="app_name">MyMovieMemoir</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">first name</string>
    <string name="surname">surname</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="postcode">postcode</string>
    <string name="email">email</string>
    <string name="checked_password">checked password</string>
    <string name="state">state</string>
    <string name="create_account">create account</string>
    <string name="birthday">birthday</string>
    <string name="home_screen">Home Screen</string>
    <string name="movie_search">Movie Search</string>
    <string name="movie_memoir">Movie Memoir</string>
    <string name="reports">Reports</string>
    <string name="maps">Maps</string>
    <string name="select">Select Birthday</string>
    <string name="birth_day_error">The birth day is invalid</string>
    <string-array name="states">
        <item>WA</item>
        <item>QLD</item>
        <item>NSW</item>
        <item>VIC</item>
        <item>SA</item>
        <item>TAS</item>
        <item>NT</item>
        <item>ACT</item>
    </string-array>

    <string-array name="sort_options">
        <item>Watching date</item>
        <item>Rating score</item>
        <item>Public rating</item>
    </string-array>
    <string-array name="filter_options">
        <item>No filter</item>
        <item>This year</item>
        <item>Select a year</item>
        <item>Positive rating</item>
        <item>Negative rating</item>
    </string-array>
    <string-array name="pie_years">
        <item>Select a year</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Overview</string>
    <string name="memoir">Memoir</string>
    <string name="watch_list">Watch List</string>
    <string name="select_watched_date">Select Watched Date</string>
    <string name="cinema_name">Cinema name</string>
    <string name="cinema_location">Cinema location</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="starting_date">Starting date</string>
    <string name="ending_date">Ending date</string>
    <string name="address">Address</string>
    <string name="user_attitude">User Attitude</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="welcome">Welcome to use</string>
    <string name="my_movie_memoir">My Movie Memoir!</string>
    <string name="welcome2">Welcome,</string>
    <string name="no_memoir_notification">You currently don\'t have a memoir.</string>
    <string name="show_password">Show Password</string>
    <string name="sort_option">Sort:</string>
    <string name="filter_option">Filter:</string>
    <string name="ok">OK</string>
    <string name="view">View</string>
</resources>
